# amz-scout

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  chainlit.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
.claude/PRPs/plans/: brand-model-normalization.plan.md  phase6-deployment.plan.md
.claude/PRPs/prds/: amz-scout-slim-refactor.prd.md  internal-amz-scout-web.prd.md
.claude/PRPs/reports/: amz-scout-slim-refactor-phase4-validation.md  brand-model-normalization-report.md  claude-md-slim-phase1-report.md  database-er-diagram.md  ean-coverage-audit-2026-04-17.md  ean-upc-auto-binding-report.md  fix-gtin-normalization-report.md  fix-token-audit-envelope-summary-drift-report.md  fix-transient-failure-permanent-dead-listing-report.md  fix-webapp-async-blocking-auto-fetch-error-filtering-report.md  phase1-webapp-scaffolding-report.md  phase2-query-tools-report.md  phase3.5-browser-audit-and-token-safety-gate-report.md  phase6-deployment-report.md  product-asins-status-cleanup-report.md  query-lifecycle-matrix.md  query-passthrough-mode-report.md  register-product-toctou-fix-report.md  remove-intent-validation-report.md  token-burn-reduction-report.md  webapp-anthropic-web-search-asin-report.md
.claude/PRPs/reviews/: local-reduce-api-token-burn-review.md  local-review-2026-04-17.md  local-review-2026-04-20.md  local-review-fix-transient-failure-permanent-dead-listing.md  local-review-register-product-toctou.md  local-review-token-audit-envelope-drift.md  phase1-webapp-scaffolding-review.md
config/: BE10000.yaml  JP_Competitor.yaml  marketplaces.yaml  test_keepa.yaml
deploy/: Caddyfile  README.md  entrypoint.sh  first-time-setup.sh
docs/: DEVELOPER.md  KNOWN_ISSUES.md  browser-route-audit.md  raw-data-insights.md
scripts/: smoke_deploy.sh
src/amz_scout/: __init__.py  _llm_trim.py  api.py  browser.py  cli.py  config.py  csv_io.py  db.py  freshness.py  keepa_service.py  marketplace.py  models.py  utils.py
tests/: conftest.py  test_api.py  test_claude_md_size.py  test_cli.py  test_config.py  test_core_flows.py  test_db.py  test_db_freshness.py  test_ensure_keepa_data_confirm.py  test_freshness.py  test_keepa_service.py  test_llm_trim.py  test_models.py  test_summaries_contract.py  test_token_audit.py  test_utils.py  test_webapp_deployment_smoke.py  test_webapp_smoke.py
tests/fixtures/: keepa_raw.py
webapp/: __init__.py  app.py  auth.py  config.py  llm.py  summaries.py  tools.py
(+20 files in other folders)
