[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amz-scout"
version = "0.1.0"
description = "Amazon competitive data scraping automation tool"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
amz-scout = "amz_scout.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/amz_scout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (may use browser-use or Keepa API)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
