[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amz-scout"
version = "0.1.0"
description = "Amazon competitive data scraping automation tool"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
]
web = [
    "chainlit>=2.7,<3",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
]

[project.scripts]
amz-scout = "amz_scout.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/amz_scout", "webapp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (may use browser-use or Keepa API)",
    "network: Tests that make real network calls (e.g., Anthropic count_tokens)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# These files contain long embedded JavaScript string literals passed to
# `browser.evaluate()`. Splitting the JS to fit the 100-char line limit would
# either break the injected syntax (JS is not whitespace-insensitive inside
# template literals, regex, or string literals) or hurt readability for zero
# gain. All other lint rules still apply to these files.
"src/amz_scout/scraper/amazon.py" = ["E501"]
"src/amz_scout/cli.py" = ["E501"]
